--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,15 +7,18 @@
     <string name="greenLight">Зеленый свет</string>
     <string name="yellowLight">Желтый свет</string>
     <string name="redLight">Красный свет</string>
-    <string name="about_text">
-        У лукоморья дуб зеленый;\n
+    <string name="about_text">        У лукоморья дуб зеленый;\n
         Златая цепь на дубе том:\n
         И днем и ночью <b>кот ученый</b>\n
         Все ходит по цепи кругом;\n
-        Идет <b>направо</b> - песнь заводит,\n
-        <b>Налево</b> - сказку говорит.
-    </string>
+        Идет <b>направо</b> - песнь заводит,\n <b>Налево</b> - сказку говорит.</string>
     <string name="about_title">О программе</string>
     <string name="about_btn_name">О программе</string>
+    <string name="title_activity_second">SecondActivity</string>
+    <string name="target">Кому:</string>
+    <string name="discription">Описание:</string>
+    <string name="sendBtnText">Передать</string>
+    <string name="title_activity_target_msg">TargetMsgActivity</string>
+    <string name="sendMsg">Передать сообщение</string>
 
 </resources>
